# MySQL-PP

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/Application/: main.cpp
src/MysqlLib/: ConnectionInfo.h  MySQLError.h  MysqlConnection.cpp  MysqlConnection.h  MysqlEnvironment.h  ResultSet.cpp  ResultSet.h
